Crash when printing about:sessionrestore
Categories
(Core :: Printing: Output, defect, P1)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr68 | --- | unaffected |
firefox-esr78 | --- | unaffected |
firefox80 | --- | unaffected |
firefox81 | --- | verified |
firefox82 | --- | verified |
People
(Reporter: emmamalysz, Assigned: emilio)
References
(Regression)
Details
(Keywords: regression)
Attachments
(2 files)
8.83 KB,
text/plain
|
Details | |
47 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
I don't believe any of the other crash bugs handle this, but I'm seeing nightly crash whenever I print about:sessionrestore. There were a few bugs that covered weird "about" behavior, but this is the only about page that always crashes when printing (as far as I can tell).
Here's my crash report:
https://crash-stats.mozilla.org/report/index/4f9cbb26-8141-4e0b-9d01-4d9390200831
Assignee | ||
Comment 2•5 years ago
|
||
Look at this beauty of a stack!
Assignee | ||
Updated•5 years ago
|
Updated•5 years ago
|
Assignee | ||
Comment 3•5 years ago
|
||
Before bug 1636728 this couldn't happen because print documents weren't
hosted in an <iframe>. The presentation of documents that are being
printed should be managed by the print job.
We should, in fact, probably just make mDocument->IsStaticDocument() the
condition, or such.
Comment 5•5 years ago
|
||
bugherder |
Updated•5 years ago
|
Comment 6•5 years ago
|
||
Set release status flags based on info from the regressing bug 1636728
![]() |
||
Comment 7•5 years ago
|
||
(In reply to Release mgmt bot [:sylvestre / :calixte / :marco for bugbug] from comment #6)
Set release status flags based on info from the regressing bug 1636728
The question is, are you going to be smart enough to update the flags if bug 1636728 gets uplifted. I'll change status-firefox81 just in case you're not.
![]() |
||
Comment 8•5 years ago
|
||
Comment on attachment 9173199 [details]
Bug 1662204 - Prevent all printed documents, not just print preview, from getting a regular non-print presentation. r=jwatt
Beta/Release Uplift Approval Request
- User impact if declined: Crash fix.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): crash fix
- String changes made/needed:
Updated•5 years ago
|
Comment 9•5 years ago
|
||
Comment on attachment 9173199 [details]
Bug 1662204 - Prevent all printed documents, not just print preview, from getting a regular non-print presentation. r=jwatt
Approved for 81.0b6.
Comment 10•5 years ago
|
||
bugherder uplift |
Updated•5 years ago
|
Updated•5 years ago
|
Comment 11•5 years ago
|
||
Reproduced this issue using Firefox 82.0a1 (BuildId:20200831215215).
This issue is verified fixed using Firefox 81.0b7 (BuildId:20200906164749) and Firefox 82.0a1 (BuildId:20200907094115). Firefox no longer crashes after printing the about:sessionrestore page with the given steps.
Description
•